# coding4kids

./: README.md
coding4kids/: pyproject.toml
coding4kids/scripts/: activate.bat  activate.sh  addlinenumbers.py  start.bat
coding4kids/src/coding4kids/: bomb.py  game.py  gameobjects.py  layouts.py  main.py  module2.py  module3.py  myfirstgame.py  player.py  playerfield.py
coding4kids/src/coding4kids/archive/12-11-2025/codeexamples/: example_12_2.py  example_12_3.py  example_12_4.py  example_13_5.py  example_13_7.py  example_14_1.py  (+1 more)
coding4kids/src/coding4kids/codeexamples/: example_12_1.py  example_13_1.py  example_13_3.py  example_13_4.py  example_13_6.py  example_14_1.py  example_15_6.py
coding4kids/src/coding4kids/experiments/backgroundimage/: main.py
coding4kids/src/coding4kids/experiments/canvas/: main.py
coding4kids/src/coding4kids/experiments/keyevents/: main.py
coding4kids/src/coding4kids/experiments/llm/: main.py
coding4kids/src/coding4kids/experiments/movedude/: main.py
coding4kids/src/coding4kids/experiments/movesquare/: main.py
coding4kids/src/coding4kids/experiments/rectangle/: main.py
coding4kids/src/coding4kids/les1/: module1.py  module1_main.py  module1_main_print.py  module2.py  module2_types.py  module3_while.py  module4_for_loop.py  module5_if.py  module6_classess.py
coding4kids/src/coding4kids/les2/: module1_canvas.py  module2.py  module2_canvas_class.py  module3.py  module3_canvas_kleur.py  module4_dude.py  module5_dude.py  module5_dude_center.py  module6_dude_center.py
coding4kids/src/coding4kids/les3/: module1_canvas.py
(+4 files in other folders)
