[project]
name = "coding4kids"
version = "0.1.0"
description = ""
authors = [
    {name = "Ralph Brecheisen", email = "r.brecheisen@maastrichtuniversity.nl"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "coding4kids", from = "src"}]

[tool.poetry.scripts]
coding4kids = "coding4kids.app:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
